--- a/src/css/announcement-bar.css
+++ b/src/css/announcement-bar.css
@@ -1,3 +1,11 @@
+:root {
+  /* set custom var for announcement bar height because
+  --docusaurus-announcement-bar-height var is not properly overridden from here
+  during yarn build/serve, eve with !important. use this custom var in
+  announcement-bar.css until a better solution is found. */
+  --helm-announcement-bar-height: 5rem;
+}
+
 /* Position the announcement bar fixed below the navbar and keep it within the body border */
 .theme-announcement-bar {
   position: fixed;
@@ -9,6 +17,8 @@
   box-sizing: border-box;
   /* Honor the site's body border visually */
   margin-inline: var(--helm-body-border);
+  /* we must override the default announcement bar height here for yarn build/serve */
+  height: var(--helm-announcement-bar-height);
 }
 
 [class*="announcementBarContent"] {
@@ -33,20 +43,22 @@
 
 /* bump content down when announcement is present */
 .theme-announcement-bar + .navbar + .main-wrapper {
-  margin-top: var(--docusaurus-announcement-bar-height);
+  margin-top: var(--helm-announcement-bar-height);
 }
 
 /* offset the sidebar viewport when announcement is present */
 @media (min-width: 997px) {
   #__docusaurus:has(.theme-announcement-bar) .theme-doc-sidebar-container {
-    margin-top: calc(-1 * calc(var(--ifm-navbar-height) + var(--docusaurus-announcement-bar-height)));
+    margin-top: calc(-1 * calc(var(--ifm-navbar-height) + var(--helm-announcement-bar-height)));
   }
 
-  #__docusaurus:has(.theme-announcement-bar) [class*="sidebarViewport"] .sidebar_njMd {
-    padding-top: calc(var(--ifm-navbar-height) + var(--docusaurus-announcement-bar-height));
+  /* target sidebar menu on both docs and blog with announcement bar */
+  #__docusaurus:has(.theme-announcement-bar) [class*="sidebarViewport"] .thin-scrollbar {
+    padding-top: var(--ifm-navbar-height);
   }
 
-  [class*="menuWithAnnouncementBar"] {
+  /* bottom of docs scrollbar when docusaurus adds this class with js */
+  #__docusaurus:has(.theme-announcement-bar) [class*="menuWithAnnouncementBar"] {
     margin-bottom: 0px;
   }
 }
@@ -54,14 +66,14 @@
 /* bump TOC on desktop down when announcement is present */
 #__docusaurus:has(.theme-announcement-bar) .theme-doc-toc-desktop,
 #__docusaurus:has(.theme-announcement-bar) [class*="tableOfContents"] {
-  top: calc(var(--ifm-navbar-height) + 1rem + var(--docusaurus-announcement-bar-height));
+  top: calc(var(--ifm-navbar-height) + 1rem + var(--helm-announcement-bar-height));
 }
 
 #__docusaurus:has(.theme-announcement-bar) [class*="tableOfContents"] {
-  max-height: calc(100vh - (var(--ifm-navbar-height) + 2rem + var(--docusaurus-announcement-bar-height)));
+  max-height: calc(100vh - (var(--ifm-navbar-height) + 2rem + var(--helm-announcement-bar-height)));
 }
 
 /* fix headers visually cut off by announcement bar */
 #__docusaurus:has(.theme-announcement-bar) .anchor {
-  scroll-margin-top: calc(var(--ifm-navbar-height) + 2rem + var(--docusaurus-announcement-bar-height));
+  scroll-margin-top: calc(var(--ifm-navbar-height) + 2rem + var(--helm-announcement-bar-height));
 }
